BUGFIX: changed `z-index` for` custom-control` class - when this property was originally set, items with `custom-control` class in the foreground were displayed.

--- a/frontend-react/src/bootstrap.scss
+++ b/frontend-react/src/bootstrap.scss
@@ -10,3 +10,7 @@
 }
 
 @import "bootstrap/scss/bootstrap.scss";
+
+.custom-control {
+	z-index:0;
+}
